--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <base href=“https://bmercan.github.io/coffeeburgershop” />
 <head>
     <title>CBS Menü</title>
     <style>
