--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="image" src="image.jpg" alt="İstediğiniz Görsel">
+        <img class="image" src="image2.jpg" alt="İstediğiniz Görsel">
     </div>
 </body>
 </html>
