--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
     <div class="container">
         <img class="image" src="image.jpg" alt="aa">
     </div>
+     <img src="image3.jpg" alt="Resim 3">
 </body>
 </html>
