--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="image" src="image.jpg" alt="aa">
+        <img class="image" src="image.jpg" alt="dd">
     </div>
      <img src="image3.jpg" alt="Resim 3">
 </body>
