--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <base href=“https://bmercan.github.io/coffeeburgershop” />
+   <!-- <base href=“https://bmercan.github.io/coffeeburgershop” /> -->
 
 <head>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
