--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="image" src="image.jpg" alt="dd">
+        <img class="image" src="image3.jpg" alt="dd">
     </div>
-     <img src="image3.jpg" alt="Resim 3">
 </body>
 </html>
