--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
     <div class="container">
-        <img class="image" src="image3.jpg" alt="dd">
+        <img class="image" src="menu.jpg" alt="dd">
     </div>
 </body>
 </html>
